Removed references of visualizaton option for drawing
Replaced references by properties for draw classes.